--- a/package.xml
+++ b/package.xml
@@ -268,6 +268,10 @@
         <name>AuraDefinitionBundle</name>
     </types>
     <types>
+        <members>Case.CN_Support_Process</members>
+        <name>BusinessProcess</name>
+    </types>
+    <types>
         <members>*</members>
         <name>CompactLayout</name>
     </types>
@@ -788,6 +792,7 @@
         <members>CN_Account_Indirect_with_Sample_with_Sample_Item</members>
         <members>CN_Account_Opportunity</members>
         <members>CN_Account_Sales_Order_Item</members>
+        <members>CN_Account_Team_Member</members>
         <members>CN_Account_With_Cases</members>
         <members>CN_Account_With_Comments</members>
         <members>CN_Account_with_Activities</members>
