1.cn finance MDM 增加CN_CR_Update_Offline_Contact_Ctrl权限 2.admin & system integration增加CN_User_Field_Edit_Email_Handler和CN_User_Upsert_To_Mg_Batch权限 3.admin profile增加campaign CN_Need_Send_Childrens_MG_Flag__c & CN_Need_Send_MG_Flag__c字段权限 4.admin profile增加，CN_Campaign_Upsert_To_Mg_Callout,CN_Campaign_Upsert_To_Mg_Handler,CN_Campaign_Upsert_To_Mg_SCH,CN_CampaignMember_Upsert_To_Mg_Callout,CN_CampaignMember_Upsert_To_Mg_Handler,CN_CampaignMember_Upsert_To_Mg_SCH类权限 5.Queue add，CN Finance, CN Food Quality, CN Legal 6.External Credentials	UAT Case Generate Excel Named Credentials	UAT Case Generate Excel External Services	CNCallCaseExcelGeneration 7.Profile+Class profile+translate+profile可以参考change list

--- a/package.xml
+++ b/package.xml
@@ -324,6 +324,7 @@
         <members>CN_Shipto_Change_Request_LC_Ctrl</members>
         <members>CN_Update_Offline_Contact_Ctrl</members>
         <members>CN_Update_Offline_Contact_Ctrl_Test</members>
+        <members>CN_User_Field_Edit_Email_Handler</members>
         <members>CN_User_Upsert_To_Mg_Batch</members>
         <members>CN_User_Upsert_To_Mg_Batch_Test</members>
         <members>Constants</members>
